# simple-redis

./: Cargo.toml  Dockerfile  README.md  cliff.toml  justfile
src/: lib.rs  main.rs  network.rs
src/cmd/: echo.rs  hmap.rs  map.rs  mget.rs  mod.rs  set.rs  unrecognized.rs
src/database/: mod.rs
src/resp/: array.rs  boolean.rs  bulk_string.rs  double.rs  frame.rs  integer.rs  map.rs  mod.rs  null.rs  set.rs  simple_error.rs  simple_string.rs
