[package]
name = "simple-redis"
version = "0.1.0"
authors = ["cuisongliu <cuisongliu@qq.com>"]
edition = "2021"
description = "simple-redis, a rusty-hermit application"
repository = "https://github.com/rust-learn-days/simple-redis"
[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
dashmap = "6.0.1"
enum_dispatch = "0.3.13"
lazy_static = "1.5.0"
thiserror = "1.0.62"
