[package]
name = "simple-redis"
version = "0.1.0"
authors = ["cuisongliu <cuisongliu@qq.com>"]
edition = "2021"
description = "simple-redis, a rusty-hermit application"
repository = "https://github.com/rust-learn-days/simple-redis"
[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
dashmap = "6.0.1"
enum_dispatch = "0.3.13"
lazy_static = "1.5.0"
thiserror = "1.0.62"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.22"
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = { version = "0.3.30", default-features = false }
